Bug 244256 - KMail crashes when auto-completing email addresses
Summary: KMail crashes when auto-completing email addresses
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 245076 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-11 21:58 UTC by Alex Merry
Modified: 2010-09-07 23:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.45 KB, text/plain)
2010-09-07 23:36 UTC, p92
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Merry 2010-07-11 21:58:17 UTC
Application: kmail (1.13.5)
KDE Platform Version: 4.5.60 (KDE 4.5.60 (KDE 4.6 >= 20100627)) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.34-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

1. Started composing a new email
2. Clicked in the first addressee field, which was set to "To"
3. Started typing a name

The autocomplete list came up after about 3 characters, and KMail immediately crashed (I only got a glimpse of the autocomplete list).

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
[KCrash Handler]
#6  0x00007fad9d89871f in QListData::size (this=0x1c751c0) at /usr/include/QtCore/qlist.h:90
#7  0x00007fad9d8aac26 in QList<QString>::count (this=0x1c751c0) at /usr/include/QtCore/qlist.h:261
#8  0x00007fad9d8d9f0d in operator<< <QString> (debug=..., list=...) at /usr/include/QtCore/qdebug.h:166
#9  0x00007fad9d8d58cb in KPIM::AddresseeLineEdit::akonadiHandlePending (this=0x1f4aca0) at /home/kde-devel/src/KDE/kdepim/libkdepim/addresseelineedit.cpp:1114
#10 0x00007fad9d8d4db9 in KPIM::AddresseeLineEdit::slotAkonadiCollectionsReceived (this=0x1f4aca0, collections=...) at /home/kde-devel/src/KDE/kdepim/libkdepim/addresseelineedit.cpp:1036
#11 0x00007fad9d8d729a in KPIM::AddresseeLineEdit::qt_metacall (this=0x1f4aca0, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7fff93a074e0)
    at /home/kde-devel/build/KDE/kdepim/libkdepim/addresseelineedit.moc:109
#12 0x00007fad9dfe2bbd in KMLineEdit::qt_metacall (this=0x1f4aca0, _c=QMetaObject::InvokeMetaMethod, _id=89, _a=0x7fff93a074e0) at /home/kde-devel/build/KDE/kdepim/kmail/kmlineeditspell.moc:74
#13 0x00007fad9e04fc4f in RecipientLineEdit::qt_metacall (this=0x1f4aca0, _c=QMetaObject::InvokeMetaMethod, _id=89, _a=0x7fff93a074e0)
    at /home/kde-devel/build/KDE/kdepim/kmail/recipientseditor.moc:135
#14 0x00007fad9953ddef in QMetaObject::activate (sender=0x1d2b7e0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff93a074e0) at kernel/qobject.cpp:3287
#15 0x00007fad9b9b3055 in Akonadi::CollectionFetchJob::collectionsReceived (this=0x1d2b7e0, _t1=...) at /home/kde-devel/build/KDE/kdepimlibs/akonadi/collectionfetchjob.moc:92
#16 0x00007fad9b9b33cb in Akonadi::CollectionFetchJobPrivate::timeout (this=0x2108e00) at /home/kde-devel/src/KDE/kdepimlibs/akonadi/collectionfetchjob.cpp:64
#17 0x00007fad9b9b2ffb in Akonadi::CollectionFetchJob::qt_metacall (this=0x1d2b7e0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff93a07660)
    at /home/kde-devel/build/KDE/kdepimlibs/akonadi/collectionfetchjob.moc:80
#18 0x00007fad9953ddef in QMetaObject::activate (sender=0x1d2b7e0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff93a07660) at kernel/qobject.cpp:3287
#19 0x00007fad9e86b8ab in KJob::result (this=0x1d2b7e0, _t1=0x1d2b7e0) at /home/kde-devel/build/KDE/kdelibs/kdecore/kjob.moc:194
#20 0x00007fad9e86ad19 in KJob::emitResult (this=0x1d2b7e0) at /home/kde-devel/src/KDE/kdelibs/kdecore/jobs/kjob.cpp:312
#21 0x00007fad9ba1bb60 in Akonadi::JobPrivate::delayedEmitResult (this=0x2108e00) at /home/kde-devel/src/KDE/kdepimlibs/akonadi/job.cpp:143
#22 0x00007fad9ba1cb5a in Akonadi::Job::qt_metacall (this=0x1d2b7e0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fff93a077f0) at /home/kde-devel/build/KDE/kdepimlibs/akonadi/job.moc:91
#23 0x00007fad9b9b2f77 in Akonadi::CollectionFetchJob::qt_metacall (this=0x1d2b7e0, _c=QMetaObject::InvokeMetaMethod, _id=34, _a=0x7fff93a077f0)
    at /home/kde-devel/build/KDE/kdepimlibs/akonadi/collectionfetchjob.moc:73
#24 0x00007fad9953ddef in QMetaObject::activate (sender=0x1f97b30, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#25 0x00007fad99542def in QSingleShotTimer::timerEvent (this=0x1f97b30) at kernel/qtimer.cpp:308
#26 0x00007fad9953b3ae in QObject::event (this=0x1f97b30, e=0x7fff93a07f90) at kernel/qobject.cpp:1204
#27 0x00007fad99c78ae4 in QApplicationPrivate::notify_helper (this=0xaaeb70, receiver=0x1f97b30, e=0x7fff93a07f90) at kernel/qapplication.cpp:4302
#28 0x00007fad99c7cbca in QApplication::notify (this=<value optimized out>, receiver=0x1f97b30, e=0x7fff93a07f90) at kernel/qapplication.cpp:4185
#29 0x00007fad9ee9301d in KApplication::notify (this=0x7fff93a083e0, receiver=0x1f97b30, event=0x7fff93a07f90) at /home/kde-devel/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:309
#30 0x00007fad99529d8c in QCoreApplication::notifyInternal (this=0x7fff93a083e0, receiver=0x1f97b30, event=0x7fff93a07f90) at kernel/qcoreapplication.cpp:726
#31 0x00007fad99555222 in QCoreApplication::sendEvent (this=0xab25d0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#32 QTimerInfoList::activateTimers (this=0xab25d0) at kernel/qeventdispatcher_unix.cpp:603
#33 0x00007fad995521f8 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#34 idleTimerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:231
#35 0x00007fad8e1d7b33 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#36 0x00007fad8e1d8310 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#37 0x00007fad8e1d85ad in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#38 0x00007fad9955287f in QEventDispatcherGlib::processEvents (this=0x7def60, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#39 0x00007fad99d1860e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#40 0x00007fad99529172 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#41 0x00007fad995293ac in QEventLoop::exec (this=0x7fff93a08210, flags=...) at kernel/qeventloop.cpp:201
#42 0x00007fad9952d7bb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#43 0x0000000000403889 in main (argc=3, argv=0x7fff93a085a8) at /home/kde-devel/src/KDE/kdepim/kmail/main.cpp:156

Reported using DrKonqi
Comment 1 Tobias Koenig 2010-07-12 09:09:53 UTC
SVN commit 1148933 by tokoe:

Do dereference the pointer before accessing it

BUG: 244256


 M  +1 -1      addresseelineedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1148933
Comment 2 Nicolas L. 2010-08-15 21:47:46 UTC
*** Bug 245076 has been marked as a duplicate of this bug. ***
Comment 3 p92 2010-09-07 23:36:09 UTC
Created attachment 51407 [details]
New crash information added by DrKonqi

kontact (4.4.5) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:
I was typing an email address in korganizer and kontact crashed during autocompletion process after 3 chars were entered, I saw the autocompletion list appearing and  kabooom

This renders some part of kontact were we cannot use an email selector in a list but only autocompletion  completely unusable ! 

email autocompletion is totaly broken since KDE SC 4.5.0

-- Backtrace (Reduced):
#6  0x00007f04ab93bd82 in QListData::size (this=0x5766090) at /usr/include/qt4/QtCore/qlist.h:94
#7  QList<QString>::count (this=0x5766090) at /usr/include/qt4/QtCore/qlist.h:267
#8  operator<< <QString> (this=0x5766090) at /usr/include/qt4/QtCore/qdebug.h:166
#9  KPIM::AddresseeLineEdit::akonadiHandlePending (this=0x5766090) at ../../libkdepim/addresseelineedit.cpp:1114
#10 0x00007f04ab93c662 in KPIM::AddresseeLineEdit::slotAkonadiCollectionsReceived (this=<value optimized out>, collections=...) at ../../libkdepim/addresseelineedit.cpp:1036