Do dereference the pointer before accessing it

BUG: 244256

svn path=/branches/KDE/4.4/kdepim/; revision=1148933